--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,7 +39,7 @@ h3 {
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 20px;
   text-align: center;
 }
 
@@ -138,9 +138,9 @@ h3 {
 
 .btn {
   padding: 10px 20px;
-  border: 1px solid #000;
+  border: 1px solid #213d60;
   border-radius: 5px;
-  background: #000;
+  background: #213d60;
   color: #fff;
   font-size: 16px;
   font-weight: 700;
@@ -372,9 +372,210 @@ footer {
   width: 64px;
   height: 64px;
   border: 8px solid;
-  border-color: #000 transparent #555 transparent;
+  border-color: #213d60 transparent #f56d6e transparent;
   border-radius: 50%;
   animation: spin 1.2s linear infinite;
+}
+
+
+/* Dashboard and chat Sidebar */
+/* Dashboard - sidebar */
+
+main {
+  position: relative;
+  height: 100vh;
+  padding-bottom: 100px;
+}
+main .helper {
+  background: rgba(0,0,0,0.2);
+  color: #213d60;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%,-50%,0);
+  padding: 1.2em 2em;
+  text-align: center;
+  border-radius: 20px;
+  font-size: 2em;
+  font-weight: bold;
+}
+main .helper span {
+  color: rgba(0,0,0,0.2);
+  font-size: 0.4em;
+  display: block;
+}
+.menu {
+  background: #213d60;
+  height: 100vh;
+  width: 240px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  outline: none;
+}
+.menu .avatar {
+  background: rgba(0,0,0,0.1);
+  padding: 2em 0.5em;
+  text-align: center;
+}
+.menu .avatar img {
+  width: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 4px solid #ffea92;
+  box-shadow: 0 0 0 4px rgba(255,255,255,0.2);
+}
+.menu .avatar h2 {
+  font-weight: normal;
+  color: white;
+  margin-bottom: 0;
+}
+.menu ul {
+  list-style: none;
+  padding: 0.5em 0;
+  margin: 0;
+}
+.menu ul li {
+  padding: 0.5em 1em 0.5em 3em;
+  font-size: 0.95em;
+  color: white;
+  font-weight: regular;
+  background-repeat: no-repeat;
+  background-position: left 15px center;
+  background-size: auto 20px;
+  transition: all 0.15s linear;
+  cursor: pointer;
+}
+
+.menu ul li.icon-user {
+  background-image: url("http://www.entypo.com/images//user.svg");
+}
+.menu ul li.chat-user {
+  background-image: url("http://www.entypo.com/images//chat.svg");
+}
+.online-user {
+  display: inline-block;
+  margin-right: 10px;
+  width: 12px;
+  height: 12px;
+  background: #51ff0d;
+  border-radius: 50%;
+  margin-top: 2px;
+}
+.menu ul li:hover {
+  background-color: #f56d6e;
+}
+.menu ul li:focus {
+  outline: none;
+}
+@media screen and (max-width: 900px) and (min-width: 400px) {
+  body {
+      padding-left: 90px;
+ }
+  .menu {
+      width: 90px;
+ }
+  .menu .avatar {
+      padding: 0.5em;
+      position: relative;
+ }
+  .menu .avatar img {
+      width: 60px;
+ }
+  .menu .avatar h2 {
+      opacity: 0;
+      position: absolute;
+      top: 50%;
+      left: 100px;
+      margin: 0;
+      min-width: 200px;
+      border-radius: 4px;
+      background: rgba(0,0,0,0.4);
+      transform: translate3d(-20px,-50%,0);
+      transition: all 0.15s ease-in-out;
+ }
+  .menu .avatar:hover h2 {
+      opacity: 1;
+      transform: translate3d(0px,-50%,0);
+ }
+  .menu ul li {
+      height: 60px;
+      background-position: center center;
+      background-size: 30px auto;
+      position: relative;
+ }
+  .menu ul li span {
+      opacity: 0;
+      position: absolute;
+      background: rgba(0,0,0,0.5);
+      padding: 0.2em 0.5em;
+      border-radius: 4px;
+      top: 50%;
+      left: 80px;
+      transform: translate3d(-15px,-50%,0);
+      transition: all 0.15s ease-in-out;
+ }
+  .menu ul li span:before {
+      content: '';
+      width: 0;
+      height: 0;
+      position: absolute;
+      top: 50%;
+      left: -5px;
+      border-top: 5px solid transparent;
+      border-bottom: 5px solid transparent;
+      border-right: 5px solid rgba(0,0,0,0.5);
+      transform: translateY(-50%);
+ }
+  .menu ul li:hover span {
+      opacity: 1;
+      transform: translate3d(0px,-50%,0);
+ }
+}
+@media screen and (max-width: 400px) {
+  body {
+      padding-left: 0;
+ }
+  .menu {
+      width: 230px;
+      box-shadow: 0 0 0 100em rgba(0,0,0,0);
+      transform: translate3d(-230px,0,0);
+      transition: all 0.3s ease-in-out;
+ }
+  .menu .smartphone-menu-trigger {
+      width: 40px;
+      height: 40px;
+      position: absolute;
+      left: 100%;
+      background: #5bc995;
+ }
+  .menu .smartphone-menu-trigger:before, .menu .smartphone-menu-trigger:after {
+      content: '';
+      width: 50%;
+      height: 2px;
+      background: #fff;
+      border-radius: 10px;
+      position: absolute;
+      top: 45%;
+      left: 50%;
+      transform: translate3d(-50%,-50%,0);
+ }
+  .menu .smartphone-menu-trigger:after {
+      top: 55%;
+      transform: translate3d(-50%,-50%,0);
+ }
+  .menu ul li {
+      padding: 1em 1em 1em 3em;
+      font-size: 0.9em;
+ }
+  .menu:focus {
+      transform: translate3d(0,0,0);
+      box-shadow: 0 0 0 100em rgba(0,0,0,0.6);
+ }
+  .menu:focus .smartphone-menu-trigger {
+      pointer-events: none;
+ }
 }
 
 @keyframes spin {
@@ -403,4 +604,16 @@ footer {
   .heading p {
     font-size: 1.5rem;
   }
+}
+
+/* Fambook buttons */
+.loginButton, .messageText{
+  background-color: #213d60;
+}
+.loginLogo, .loginForgot {
+color: #f56d6e;
+}
+
+.message.own .messageText {
+  background-color: #f56d6e;
 }
